# mchat

./: .gitignore  LICENSE  README.md  chat.py  config.py  mchat.py  pyproject.toml  serve.py  settings.toml
dev-examples/: async_callback_test.py  scroll_area_test.py  worker_test.py
mchat/: Conversation.py  agent_manager.py  azure_auth.py  conversation.py  default_agents.json  default_agents.yaml  default_personas.json  history.py  llm.py  llmtool_web_search.py  llmtools.py  logging_config.py  main.py  mchat.css  mchat.py  mchat.tcss  mchatweb.py  model_manager.py  rag.py  smart_markdown.js  smart_markdown.py  statusbar.py  styles.py  terminator.py  tool_utils.py
mchat/tools/: _fred.py  _generate_image.py  _rag.py  _up_to_date.py  _web_search.py
mchat/tui/widgets/: DebugPane.py  History.py  PromptInput.py
mchat/widgets/: ChatTurn.py  DebugPane.py  Dialog.py  FilePicker.py  History.py  MultiLineInput.py  PromptInput.py  StatusBar.py
