[tool.poetry]
name = "mchat"
version = "0.1.0"
description = "ChatGPT TUI Application"
authors = ["jspv <jspvgithub@twinleaf.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.28.1"
openai = "^1.41.0"
pyyaml = "^6.0"
tiktoken = "^0.4.0"
textual = "^0.70.0"
rich = "^13.5.1"
dynaconf = "^3.2.2"
pyperclip = "^1.8.2"
apsw = "^3.44.0.0"
retry = "^0.9.2"
pytz = "^2023.3.post1"
pypdf = "^3.17.2"
chromadb = "^0.4.19"
textual-dominfo = "^0.1.0"
autogen-core = { path = "../autogen/python/packages/autogen-core", develop=true }
autogen-ext = { path = "../autogen/python/packages/autogen-ext" , develop=true}
autogen-agentchat = { path = "../autogen/python/packages/autogen-agentchat" , develop=true}
pydantic = "2.9.2"

[tool.poetry.scripts]
mchat = "mchat.mchat:run"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
textual-dev = "^1.2.1"
jupyter = "^1.0.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
