[project]
description = "Multi-Model AI Chat System TUI"
readme = "README.md"
requires-python = ">=3.11"
name = "mchat"
version = "0.1.0"
authors = [{ name = "jspv", email = "jspvgithub@twinleaf.xyz" }]
dependencies = [
    "aiofiles>=24.1.0",
    "apsw>=3.47.2.0",
    "autogen-agentchat>=0.4.9.2",
    "autogen-core>=0.4.9.2",
    "autogen-ext[azure,openai]>=0.4.9.2",
    "azure-identity>=1.20.0",
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "dynaconf>=3.2.6",
    "fredapi>=0.5.2",
    "latex2mathml>=3.77.0",
    "nicegui>=2.13.0",
    "playwright>=1.49.1",
    "pypdf>=5.3.1",
    "pytest-playwright>=0.6.2",
    "retry>=0.9.2",
    "rich>=13.9.4",
    "tzlocal>=5.2",
]

[dependency-groups]
dev = ["poethepoet>=0.31.1", "ruff>=0.8.4"]

[tool.uv.sources]

[tool.poe.tasks]
mchat = "python -m mchat.main"

# Same as Black.
[tool.ruff]
line-length = 88
indent-width = 4
fix = true
target-version = "py310"
exclude = ["tests", "docs", "build", "dist", ".venv", ".vscode", ".git", "tui"]


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

select = ["E", "F", "W", "B", "Q", "I", "ASYNC", "T20", "UP"]
# ignore = ["F401", "E501"]

[tool.ruff.lint.flake8-tidy-imports]
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest".msg = "Use `pytest` instead."
